  * Implemented a form to allow users to change their password.  If the
    HTTP API is enabled, a link will appear in the side menu.
  * Implemented a new command "/identify" (also availble in the users
    menu) that discloses the IP address from which a user connected.
  * Implemented a contextual menu that triggers on a double click on
    a chat entry.
  * Added a new command "/stopshare".

14 April 2024: Galene 0.8.2

  * Fixed possible crashes in the VP8 and AV1 parsers.
  * Fixed keyframe detection for VP8 and VP9.

9 March 2024: Galene 0.8.1

  * Security fixes to WHIP ingress.
  * Improved error messages for authentication failures.
  * Added "expires" and "not-before" to group descriptions.
  * Allow proxyURL to contain a path, for people who run Galene at
    non-root URLs.  This requires manually modifying the files under
    'static/' in order to point at the right locations.

25 November 2023: Galene 0.8

  * Added a new configuration option "publicServer".
  * Implemented the WHIP protocol (draft-ietf-wish-whip).
  * Disabled simulcast on Firefox by default.
  * Removed support for protocol version 1 (used before version 0.7)
  * Worked around clients that don't set the VP9 and H.264 profiles.
  * Updated the activity detection code to work with newer browsers.
    Thanks to Jackson Vieira.
  * Constrained videos sent from a browser to use 4:3 aspect.
  * Implemented BCrypt as an alternate password encryption algorithm.

9 July 2023: Galene 0.7.2

  * Improved workaround for Safari's autoplay-related mis-features.
  * Fixed minor bugs related to stateful tokens.

14 May 2023: Galene 0.7.1

  * Fixed incorrect error-handling in token parsing, which could cause
    Galene to crash after receiving a mis-formatted token.
  * Implement a dialog for creating tokens.
  * Tweaked peer-to-peer file transfer to more reliably return an error
    message to the user.
  * Fixed the workaround for non-standard simulcast in older Firefox
    versions.
