@@ -48,27 +48,27 @@ func TestStatefulCheck(t *testing.T) {
 		Token:       "token",
 		Group:       "group",
 		Username:    &user,
-		Permissions: []string{"present"},
+		Permissions: []string{"present", "message"},
 		Expires:     &future,
 	}
 	token2 := &Stateful{
 		Token:       "token",
 		Group:       "group",
-		Permissions: []string{"present"},
+		Permissions: []string{"present", "message"},
 		Expires:     &future,
 	}
 	token3 := &Stateful{
 		Token:       "token",
 		Group:       "group",
 		Username:    &user,
-		Permissions: []string{"present"},
+		Permissions: []string{"present", "message"},
 		Expires:     &past,
 	}
 	token4 := &Stateful{
 		Token:       "token",
 		Group:       "group",
 		Username:    &user,
-		Permissions: []string{"present"},
+		Permissions: []string{"present", "message"},
 		Expires:     &future,
 		NotBefore:   &nearFuture,
 	}
@@ -85,27 +85,27 @@ func TestStatefulCheck(t *testing.T) {
 			group:          "group",
 			username:       &user,
 			expUsername:    user,
-			expPermissions: []string{"present"},
+			expPermissions: []string{"present", "message"},
 		},
 		{
 			token:          token1,
 			group:          "group",
 			username:       &user2,
 			expUsername:    user,
-			expPermissions: []string{"present"},
+			expPermissions: []string{"present", "message"},
 		},
 		{
 			token:          token1,
 			group:          "group",
 			expUsername:    user,
-			expPermissions: []string{"present"},
+			expPermissions: []string{"present", "message"},
 		},
 		{
 			token:          token2,
 			group:          "group",
 			username:       &user,
 			expUsername:    "",
-			expPermissions: []string{"present"},
+			expPermissions: []string{"present", "message"},
 		},
 	}
 
@@ -232,14 +232,14 @@ func TestTokenStorage(t *testing.T) {
 			Token:       "tok1",
 			Group:       "test",
 			Username:    &user1,
-			Permissions: []string{"present"},
+			Permissions: []string{"present", "message"},
 			Expires:     &future,
 		},
 		&Stateful{
 			Token:       "tok2",
 			Group:       "test",
 			Username:    &user2,
-			Permissions: []string{"present", "record"},
+			Permissions: []string{"present", "record", "message"},
 			Expires:     &nearFuture,
 			NotBefore:   &past,
 		},
@@ -247,7 +247,7 @@ func TestTokenStorage(t *testing.T) {
 			Token:       "tok3",
 			Group:       "test",
 			Username:    &user3,
-			Permissions: []string{"present"},
+			Permissions: []string{"present", "message"},
 			Expires:     &nearFuture,
 		},
 	}
@@ -327,35 +327,35 @@ func TestExpire(t *testing.T) {
 			Token:       "tok1",
 			Group:       "test",
 			Username:    &user,
-			Permissions: []string{"present"},
+			Permissions: []string{"present", "message"},
 			Expires:     &now,
 		},
 		&Stateful{
 			Token:       "tok2",
 			Group:       "test",
 			Username:    &user,
-			Permissions: []string{"present"},
+			Permissions: []string{"present", "message"},
 			Expires:     &future,
 		},
 		&Stateful{
 			Token:       "tok3",
 			Group:       "test",
 			Username:    &user,
-			Permissions: []string{"present"},
+			Permissions: []string{"present", "message"},
 			Expires:     &now,
 		},
 		&Stateful{
 			Token:       "tok4",
 			Group:       "test",
 			Username:    &user,
-			Permissions: []string{"present"},
+			Permissions: []string{"present", "message"},
 			Expires:     &past,
 		},
 		&Stateful{
 			Token:       "tok5",
 			Group:       "test",
 			Username:    &user,
-			Permissions: []string{"present"},
+			Permissions: []string{"present", "message"},
 			Expires:     &longPast,
 		},
 	}
